Fixing home page buttons on mobile

--- a/css/cpajobs.less
+++ b/css/cpajobs.less
@@ -3869,6 +3869,9 @@ a.flex-tab.active { color: @secondary_color;}
 }
 
 @media (max-width: 469px) {
+	a.btn {
+		font-size: 13px;
+	}
 	.hidden-tablet {
 		display: block;
 	}
